[package]
name = "libappindicator-sys"
version = "0.4.0"
authors = ["Kyle Machulis <kyle@nonpolynomial.com>", "xVan Turing <xVanTuring@outlook.com>"]
description = "Rust raw bindings for libappindicator"
license = "LGPL-2.1/LGPL-3.0"
homepage = "http://github.com/qdot/libappindicator-sys"
repository = "https://github.com/qdot/libappindicator-sys.git"
readme = "README.md"
keywords = ["linux", "gui"]
build = "build.rs"
categories = ["external-ffi-bindings"]

[badges]
travis-ci = { repository = "qdot/libappindicator-sys" }

[dependencies]
gtk-sys = "0.9.2"

[build-dependencies]
bindgen = "0.52.0"
pkg-config = "0.3.17"
